# ML-for-TTRPG-game-design

./: .gitignore  .pre-commit-config.yaml  Abomination-vaults-bestiary.ipynb  Makefile  Pathfinder.ipynb  Pathfinder_analysis_of_other_columns.ipynb  Pathfinder_system.ipynb  Pathfinder_system_abilities_attributes.ipynb  README.md  analysis_functions.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_notebooks.txt  requirements_style.txt  requirements_test.txt  requirements_webserver.txt  serverless.yml  system_linear_regression.ipynb
counterfactual_datasets/: bestiaries_basic.csv  bestiaries_full.csv
counterfactuals_datasets/: bestiaries.csv
docker/: Dockerfile_aws  Dockerfile_frontend  Dockerfile_server
notebooks/: README.md
notebooks/characteristics/: melee.ipynb  melee_ranged.ipynb  spells_number.ipynb
notebooks/counterfactuals/: counterfactuals_introduction.ipynb  counterfactuals_orc.ipynb  counterfactualt_introduction.ipynb
notebooks/data analysis/: Abomination-vaults-bestiary.ipynb  Pathfinder.ipynb  Pathfinder_system_abilities_attributes.ipynb  Pathfinder_system_other_columns.ipynb  analysis_functions.py
notebooks/data_analysis/: add_more_books.ipynb  (+7 more)
output/: bestiary_system_basic.json  current_model.pkl
pathfinder_2e_data/: abomination-vaults-bestiary.db  action-macros.db  actions.db  adventure-specific-actions.db  age-of-ashes-bestiary.db  agents-of-edgewatch-bestiary.db  ancestries.db  ancestryfeatures.db  april-fools-bestiary.db  backgrounds.db  bestiary-ability-glossary-srd.db  bestiary-effects.db  bestiary-family-ability-glossary.db  blog-bestiary.db  blood-lords-bestiary.db  book-of-the-dead-bestiary.db  boons-and-curses.db  campaign-effects.db  classes.db  classfeatures.db  conditions.db  criticaldeck.db  crown-of-the-kobold-king-bestiary.db  deities.db  domains.db  equipment-effects.db  extinction-curse-bestiary.db  fall-of-plaguestone.db  familiar-abilities.db  feat-effects.db  fists-of-the-ruby-phoenix-bestiary.db  gatewalkers-bestiary.db  gmg-srd.db  hazards.db  heritages.db  hero-point-deck.db  iconics.db  impossible-lands-bestiary.db  journals.db  macros.db  (+27 more)
saved_models/: changelogs.md
serving/: server.py
test/: constants.py  creating_dataset_test.ipynb  test_calculate_level.py  test_create_model.py  test_creating_dataset.py  test_crete_model_notebook.ipynb  test_generate_counterfactuals.py  test_save_load_model_to_file.py  test_splitting_dataset.py
training/: analysis_functions.py  book_year_mapping.json  books_with_dates.csv  calculate_level.py  constants.py  create_model.py  creating_dataset.py  results.py  save_current_model.py  save_load_model_to_file.py  save_preprocessed_bestiaries.py  splitting_dataset.py
(+93 files in other folders)
