[tool.poetry]
name = "pathfinder-monster-creator"
version = "0.1.0"
description = "Project supporting pen & paper RPG game design using machine learning."
authors = [
    "Paulina Jędrychowska <>",
    "Bogumiła Papiernik <>",
    "Jolanta Śliwa <>"
]

[tool.poetry.dependencies]
python = "3.10.*"

dice_ml = "0.*"
lightgbm = "3.3.*"
numpy = "1.24.*"
optuna = "3.3.*"
pandas = "1.4.*"
pydantic = "1.10.*"
scikit-learn = "1.2.*"

[tool.poetry.group.style.dependencies]
pre-commit = "2.20.*"

[tool.poetry.group.test.dependencies]
pytest = "7.1.*"

[tool.pytest.ini_options]
pythonpath = [
  "serving/backend"
]

[tool.poetry.group.webserver.dependencies]
fastapi = "0.101.*"
mangum = "0.17.*"
pandas = "1.4.*"
scikit-learn = "1.2.*"
uvicorn = "0.22.*"
greenlet = "3.0.1" # uptade to 3.0.2 is not working with poetry

[tool.poetry.group.notebooks.dependencies]
jupyter = "1.0.*"
matplotlib = "3.8.*"

# poetry export --without-hashes --format=requirements.txt --with="style,test,webserver,notebooks" --output=requirements.txt
